--- a/index.html
+++ b/index.html
@@ -183,10 +183,66 @@
                     Подключить
                 </a>
             </div>
-            <div class="4k_packet">
-
+            <div class="k_packet">
+                <h3>Базовый + 4K UHD-пакет</h3>
+                <p>Наслаждайтесь любимыми фильмами с тарифом 4K UHD-пакет для дома!</p>
+                <div class="channel">
+                    <img src="img/whitecontrol.png"/>&nbsp&nbsp&nbsp
+                    <span style="font-weight:400; font-size: 110%; color: white">100 каналов</span>
+                </div>
+                <div class="amount">
+                    <img src="img/hd.png"/>&nbsp&nbsp&nbsp&nbsp
+                    <span style="font-weight:400; font-size: 110%; color: white">37  каналов HD Качество</span>
+                </div>
+                <h1>11.50 EUR/месяц</h1>
+                <a class="enjoy_button" style="background: #FF5C28;">
+                    Подключить
+                </a>
             </div>
         </div>
     </main>
+    <footer class="footer">
+        <div class="up_footer">
+            <div class="narva">
+                <p style="border-bottom: 2px solid #FF5C28; width: 25%; padding-bottom: 8%;">Нарва</p>
+                <div class="seb">
+                    <p>Seb:</p>&nbsp&nbsp&nbsp&nbsp
+                    <p>E1234567232333</p>
+                </div>
+                <div class="swebank">
+                    <p>Swebank:</p> &nbsp&nbsp&nbsp&nbsp
+                    <p>E1234567232333</p>
+                </div>
+            </div>
+            <div class="numbers">
+                <p style="border-bottom: 2px solid #FF5C28; width: 70%; padding-bottom: 8%;">Номера телефонов</p>
+                <div class="dis">
+                    <p>Диспетчер:</p>&nbsp&nbsp&nbsp&nbsp
+                    <p>+(372) 123 123 12</p>
+                </div>
+                <div class="money_check">
+                    <p>Бухгалтер:</p>&nbsp&nbsp&nbsp&nbsp
+                    <p>+(372) 123 123 12</p>
+                </div>
+            </div>
+            <div class="work_time">
+                <p style="border-bottom: 2px solid #FF5C28; width: 95%; padding-bottom: 8%;">Рабочее время</p>
+                <p>Пн-Пт 8.00-23.00</p>
+            </div>
+            <div class="society">
+                <p style="border-bottom: 2px solid #FF5C28; width: 100%; padding-bottom: 8%;">Мы в соц.сетях</p>
+                <div class="icons">
+                    <img src="img/vk.png"/>
+                    <img src="img/facebook.png"/>
+                    <img src="img/ok.png"/>
+                </div>
+            </div>
+        </div>
+        <div class="down_footer">
+            <img src="img/logo.png"/>
+            <p>1999-2021 FILL NETWORKS © Все права защищены</p>
+            <a href="">Политика конфиденциальности</a>
+        </div>
+    </footer>
 </body>
 </html>
