--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <img src="img/logo.png"/>
         </div>
         <ul class="nav">
-            <li>О фирме</li>
+            <a href="about.html" style="color: inherit;text-decoration: none"><li>О фирме</li></a>
             <li>Услуги</li>
             <li>Тех.поддержка</li>
             <li>Зона покрытия</li>
