--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
     </a>
 </nav>
 <main class="wrapper">
-    <div class="prev">
+    <div style="width: 12%" class="prev">
         <a href="index.html">Главная</a>
         <img src="img/right_arrow.png"/>
         <p>О фирме</p>
