--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
         </div>
         <ul class="nav">
             <a href="about.html" style="color: inherit;text-decoration: none"><li>О фирме</li></a>
-            <li>Услуги</li>
-            <li>Тех.поддержка</li>
-            <li>Зона покрытия</li>
-            <li>Акции</li>
+            <a href="services.html" style="color: inherit;text-decoration: none"><li>Услуги</li></a>
+            <a href="support.html" style="color: inherit;text-decoration: none"><li>Тех.поддержка</li></a>
+            <a href="about.html" style="color: inherit;text-decoration: none"><li>Зона покрытия</li></a>
+            <a href="about.html" style="color: inherit;text-decoration: none"> <li>Акции</li></a>
         </ul>
         <a href="login.html" class="lk_button">
             Личный кабинет
