--- a/stock.html
+++ b/stock.html
@@ -33,40 +33,51 @@
     <ul class="nav">
         <a href="about.html" style="color: inherit;text-decoration: none"><li>О фирме</li></a>
         <a href="services.html" style="color: inherit;text-decoration: none"><li>Услуги</li></a>
-        <a href="support.html" style="color: #10C3F4;text-decoration: none"><li>Тех.поддержка</li></a>
-        <a href="about.html" style="color: inherit;text-decoration: none"><li>Зона покрытия</li></a>
-        <a href="about.html" style="color: inherit;text-decoration: none"> <li>Акции</li></a>
+        <a href="support.html" style="color: inherit;text-decoration: none"><li>Тех.поддержка</li></a>
+        <a href="stock.html" style="color: inherit;text-decoration: none"><li>Зона покрытия</li></a>
+        <a href="about.html" style="color: #10C3F4;text-decoration: none"> <li>Акции</li></a>
     </ul>
     <a href="login.html" class="lk_button">
         Личный кабинет
     </a>
 </nav>
 <main class="wrapper">
-    <div style="width: 20%" class="prev">
+    <div style="width: 10%" class="prev">
         <a href="index.html">Главная</a>
         <img src="img/right_arrow.png"/>
-        <p>Техническая поддержка</p>
+        <p>Акции</p>
     </div>
     <div class="support_content">
-        <h1 style="font-size: 150%; color: #10C3F4; margin-top: 3%;">Техническая поддержка</h1>
-        <form class="support_form">
-            <div class="feedback">
-                <textarea placeholder="Сообщение"></textarea>
+        <h1 style="font-size: 150%; color: #10C3F4; margin-top: 3%;">Акции</h1>
+        <div style="background-image: url('img/firstslide.png'); margin-top: 5%;" class="net_packet">
+            <img style="margin-left: 3%; margin-top: 3%; margin-bottom: -3%" src="img/hd.svg">
+            <h3 style="color: #10C3F4; font-weight: 700; font-size: 300%">ИНТЕРНЕТ + ТВ</h3>
+            <p style="font-size: 150%">15 € / месяц</p>
+            <a style="text-decoration: none; padding: 1% 0 1% 0; width: 15%; margin-left: 3%; margin-bottom: -2%;" class="enjoy_button">
+                Подробнее
+            </a>
+            <p style="margin-top: 10%; margin-bottom: -5%;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+        </div>
+        <div style="margin-top: 2%;" class="net_packet">
+            <h3>Интернет +ТВ</h3>
+            <p>Оставайтесь в цифровом мире. Смотрите ТВ и Пользуйтесь интернетом в удобном тарифе для дома!</p>
+            <div class="net_speed">
+                <img src="img/net.png"/>&nbsp&nbsp&nbsp
+                <span style="font-weight: 500">Интернет <span style="font-weight: 700;">30</span> Мбит/с</span>
             </div>
-            <h1>Обратная связь</h1>
-            <img src="img/blue_line.png"/>
-            <p style="margin-top: 8%;">Ваше имя</p>
-            <input type="text">
-            <p style="margin-top: 3%;">Ваш номер телефона</p>
-            <input type="text">
-            <p style="margin-top: 2.5%;">Ваша почта</p>
-            <input type="text">
-            <div style="margin-top: 2%;">
-                <input style="width: 3%;margin-left: -1%;" type="checkbox">
-                <h5 style="color: white; font-size: 105%;margin-top: 3.4%;">Я согласен(а) на обработку данных</h5>
+            <div class="ip">
+                <img src="img/smart.png"/>&nbsp&nbsp&nbsp
+                <span style="font-weight:500; font-size: 110%">IPTV</span>
             </div>
-            <button style="float:right;margin-top: -3%; border: none; outline: none; font-family: 'Montserrat', sans-serif; font-size: 125%; font-weight: 600; color: white;height: 10.4%;width: 44.5%; background: #10C3F4" type="submit">ОТПРАВИТЬ</button>
-        </form>
+            <div class="channels">
+                <img src="img/control.png"/>&nbsp&nbsp&nbsp
+                <span style="font-weight:500; font-size: 110%;">30+ каналов</span>
+            </div>
+            <h1>15 EUR/месяц</h1>
+            <a class="enjoy_button">
+                Подключить
+            </a>
+        </div>
     </div>
 </main>
 <footer class="footer">
