--- a/about.html
+++ b/about.html
@@ -31,11 +31,11 @@
         <img src="img/logo.png"/>
     </div>
     <ul class="nav">
-        <a href="about.html" style="color: inherit;text-decoration: none"><li>О фирме</li></a>
-        <li>Услуги</li>
-        <li>Тех.поддержка</li>
-        <li>Зона покрытия</li>
-        <li>Акции</li>
+        <a href="about.html" style="color: #10C3F4;text-decoration: none"><li>О фирме</li></a>
+        <a href="services.html" style="color: inherit;text-decoration: none"><li>Услуги</li></a>
+        <a href="support.html" style="color: inherit;text-decoration: none"><li>Тех.поддержка</li></a>
+        <a href="about.html" style="color: inherit;text-decoration: none"><li>Зона покрытия</li></a>
+        <a href="stock.html" style="color: inherit;text-decoration: none"> <li>Акции</li></a>
     </ul>
     <a href="login.html" class="lk_button">
         Личный кабинет
