--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
-<html lang="ru">
+<!doctype html>
+<html lang="en">
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css">
-<script src="js/script.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
-<script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
 <head>
     <title>Fill Networks</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
     <header class="header">
@@ -55,7 +54,7 @@
             <a href="about.html" style="color: inherit;text-decoration: none"><li>О фирме</li></a>
             <a href="services.html" style="color: inherit;text-decoration: none"><li>Услуги</li></a>
             <a href="support.html" style="color: inherit;text-decoration: none"><li>Тех.поддержка</li></a>
-            <a href="about.html" style="color: inherit;text-decoration: none"><li>Зона покрытия</li></a>
+            <a href="stock.html" style="color: inherit;text-decoration: none"><li>Зона покрытия</li></a>
             <a href="about.html" style="color: inherit;text-decoration: none"> <li>Акции</li></a>
         </ul>
         <a href="login.html" class="lk_button">
@@ -63,20 +62,205 @@
         </a>
     </nav>
     <main class="wrapper">
-        <div class="slider">
-            <img src="img/slider.png"/>
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <ol style="height: 10%" class="carousel-indicators">
+                <li style="height: 20%; width: 6%; background: #D7D7D7;" data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                <li style="height: 20%; width: 6%; background: #10C3F4; margin-left: 1%;" data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                <li style="height: 20%; width: 6%; background: #D7D7D7; margin-left: 1%;" data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                <li style="height: 20%; width: 6%; background: #D7D7D7; margin-left: 1%;" data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+            </ol>
+            <div class="carousel-inner">
+                <div style="background-image: url('img/firstslide.png')" class="carousel-item active net_packet">
+                    <img style="margin-left: 3%; margin-top: 3%; margin-bottom: -3%" src="img/hd.svg">
+                    <h3 style="color: #10C3F4; font-weight: 700; font-size: 300%">ИНТЕРНЕТ + ТВ</h3>
+                    <p style="font-size: 150%">15 € / месяц</p>
+                    <a style="text-decoration: none; padding: 1% 0 1% 0; width: 15%; margin-left: 3%; margin-bottom: -2%;" class="enjoy_button">
+                        Подробнее
+                    </a>
+                    <p style="margin-top: 10%; margin-bottom: -5%;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+                </div>
+                <div style="background-image: url('img/firstslide.png')" class="carousel-item net_packet">
+                    <img style="margin-left: 3%; margin-top: 3%;" src="img/hd.svg">
+                    <h3 style="color: #10C3F4; font-weight: 700; font-size: 300%">ИНТЕРНЕТ + ТВ</h3>
+                    <p style="font-size: 150%">15 € / месяц</p>
+                    <a style="text-decoration: none; padding: 1% 0 1% 0; width: 15%; margin-left: 3%;" class="enjoy_button">
+                        Подробнее
+                    </a>
+                    <p style="margin-top: 10%; margin-bottom: -5%;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+                </div>
+                <div style="background-image: url('img/firstslide.png')" class="carousel-item net_packet">
+                    <img style="margin-left: 3%; margin-top: 3%;" src="img/hd.svg">
+                    <h3 style="color: #10C3F4; font-weight: 700; font-size: 300%">ИНТЕРНЕТ + ТВ</h3>
+                    <p style="font-size: 150%">15 € / месяц</p>
+                    <a style="text-decoration: none; padding: 1% 0 1% 0; width: 15%; margin-left: 3%;" class="enjoy_button">
+                        Подробнее
+                    </a>
+                    <p style="margin-top: 10%; margin-bottom: -5%;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+                </div>
+            </div>
         </div>
         <div class="services">
             <div class="choose">
                 <p style="font-size: 150%; font-weight: 500; color: #4F4F4F;">Услуги</p>
                 <div class="choose_type">
-                    <p>Интернет + ТВ</p>
-                    <p style="background: #C7F3FF;border-radius: 3px;padding: 1.5% 4% 1.5% 4%;">Интернет</p>
-                    <p>Кабельное ТВ</p>
+                    <p class="click_st" style="padding: 1.5% 4% 1.5% 4%; cursor: pointer">Интернет + ТВ</p>
+                    <p class="click_nd" style="background: #C7F3FF;border-radius: 3px;padding: 1.5% 4% 1.5% 4%; cursor: pointer">Интернет</p>
+                    <p class="click_rd" style="padding: 1.5% 4% 1.5% 4%; cursor: pointer">Кабельное ТВ</p>
                 </div>
                 <div class="tap_img">
                     <img src="img/tap.png"/>&nbsp&nbsp&nbsp
                     <p>Выберите подходящий тариф и<br> оставьте заявку на подключение</p>
+                </div>
+            </div>
+            <div style="display: none;" class="services_suggests_rd">
+                <div class="suggest">
+                    <h4>«Базовый пакет»</h4>
+                    <h5>Интерактивное цифровое телевидение высокого качества</h5>
+                    <div style="margin-top: 15%;" class="speed">
+                        <div style="" class="speed_info">
+                            <img src="img/orange_phone.png"/>&nbsp&nbsp&nbsp
+                            <p>Каналы:</p>
+                        </div>
+                        <p>63 канала</p>
+                    </div>
+                    <div class="cost">
+                        <div class="cost_info">
+                            <img src="img/cost.png"/>&nbsp&nbsp&nbsp
+                            <p>Цена:</p>
+                        </div>
+                        <p style="margin-top: 3%;">9 EUR/месяц</p>
+                    </div>
+                    <a class="connect_button">
+                        Подключить
+                    </a>
+                </div>
+                <div class="suggest">
+                    <h4>«4K UHD-пакет»</h4>
+                    <h5>Интерактивное цифровое телевидение высокого качества</h5>
+                    <div style="padding-top: 8%;" class="speed">
+                        <div class="speed_info">
+                            <img src="img/orange_phone.png"/>&nbsp&nbsp&nbsp
+                            <p>Каналы:</p>
+                        </div>
+                        <p>+37 каналов</p>
+                    </div>
+                    <div class="cost">
+                        <div class="cost_info">
+                            <img src="img/cost.png"/>&nbsp&nbsp&nbsp
+                            <p>Цена:</p>
+                        </div>
+                        <p>+2.50 EUR/месяц</p>
+                    </div>
+                    <a class="connect_button">
+                        Подключить
+                    </a>
+                </div>
+                <div class="suggest">
+                    <h4>«Эротик-пакет +18»</h4>
+                    <h5>Интерактивное цифровое телевидение высокого качества</h5>
+                    <div style="padding-top: 8%;" class="speed">
+                        <div class="speed_info">
+                            <img src="img/orange_phone.png"/>&nbsp&nbsp&nbsp
+                            <p>Каналы:</p>
+                        </div>
+                        <p>+2 канала</p>
+                    </div>
+                    <div class="cost">
+                        <div class="cost_info">
+                            <img src="img/cost.png"/>&nbsp&nbsp&nbsp
+                            <p>Цена:</p>
+                        </div>
+                        <p>+1.25 EUR/месяц</p>
+                    </div>
+                    <a class="connect_button">
+                        Подключить
+                    </a>
+                </div>
+            </div>
+            <div style="display: none;" class="services_suggests_nd">
+                <div class="suggest">
+                    <h4>«COMFORT 1»</h4>
+                    <h5>Интерактивное цифровое телевидение высокого качества + интернет</h5>
+                    <div style="margin-bottom: -5%;" class="speed">
+                        <div class="speed_info">
+                            <img src="img/orange_phone.png"/>&nbsp&nbsp&nbsp
+                            <p>Каналы: </p>
+                        </div>
+                        <p>63 канала</p>
+                    </div>
+                    <div class="speed">
+                        <div class="speed_info">
+                            <img src="img/speed.png"/>&nbsp&nbsp&nbsp
+                            <p>Скорость: </p>
+                        </div>
+                        <p>До 30 Мбит/с</p>
+                    </div>
+                    <div class="cost">
+                        <div class="cost_info">
+                            <img src="img/cost.png"/>&nbsp&nbsp&nbsp
+                            <p>Цена:</p>
+                        </div>
+                        <p>15 EUR/месяц</p>
+                    </div>
+                    <a class="connect_button">
+                        Подключить
+                    </a>
+                </div>
+                <div class="suggest">
+                    <h4>«COMFORT 2»</h4>
+                    <h5>Интерактивное цифровое телевидение высокого качества + интернет</h5>
+                    <div style="margin-bottom: -10%;" class="speed">
+                        <div class="speed_info">
+                            <img src="img/orange_phone.png"/>&nbsp&nbsp&nbsp
+                            <p>Каналы: </p>
+                        </div>
+                        <p>63 канала</p>
+                    </div>
+                    <div style="padding-top: 8%;" class="speed">
+                        <div class="speed_info">
+                            <img src="img/speed.png"/>&nbsp&nbsp&nbsp
+                            <p>Скорость:</p>
+                        </div>
+                        <p>До 50 Мбит/с</p>
+                    </div>
+                    <div class="cost">
+                        <div class="cost_info">
+                            <img src="img/cost.png"/>&nbsp&nbsp&nbsp
+                            <p>Цена:</p>
+                        </div>
+                        <p>20 EUR/месяц</p>
+                    </div>
+                    <a class="connect_button">
+                        Подключить
+                    </a>
+                </div>
+                <div class="suggest">
+                    <h4>«COMFORT 3»</h4>
+                    <h5>Интерактивное цифровое телевидение высокого качества + интернет</h5>
+                    <div style="margin-bottom: -10%;" class="speed">
+                        <div class="speed_info">
+                            <img src="img/orange_phone.png"/>&nbsp&nbsp&nbsp
+                            <p>Каналы: </p>
+                        </div>
+                        <p>63 канала</p>
+                    </div>
+                    <div style="padding-top: 8%;" class="speed">
+                        <div class="speed_info">
+                            <img src="img/speed.png"/>&nbsp&nbsp&nbsp
+                            <p>Скорость:</p>
+                        </div>
+                        <p>До 100 Мбит/с</p>
+                    </div>
+                    <div class="cost">
+                        <div class="cost_info">
+                            <img src="img/cost.png"/>&nbsp&nbsp&nbsp
+                            <p>Цена:</p>
+                        </div>
+                        <p>25 EUR/месяц</p>
+                    </div>
+                    <a class="connect_button">
+                        Подключить
+                    </a>
                 </div>
             </div>
             <div class="services_suggests">
@@ -468,5 +652,9 @@
             <a href="">Политика конфиденциальности</a>
         </div>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
