--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <a href="services.html" style="color: inherit;text-decoration: none"><li>Услуги</li></a>
             <a href="support.html" style="color: inherit;text-decoration: none"><li>Тех.поддержка</li></a>
             <a href="stock.html" style="color: inherit;text-decoration: none"><li>Зона покрытия</li></a>
-            <a href="about.html" style="color: inherit;text-decoration: none"> <li>Акции</li></a>
+            <a href="stock.html" style="color: inherit;text-decoration: none"> <li>Акции</li></a>
         </ul>
         <a href="login.html" class="lk_button">
             Личный кабинет
@@ -80,7 +80,7 @@
                     <p style="margin-top: 10%; margin-bottom: -5%;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
                 </div>
                 <div style="background-image: url('img/firstslide.png')" class="carousel-item net_packet">
-                    <img style="margin-left: 3%; margin-top: 3%;" src="img/hd.svg">
+                    <img style="margin-left: 3%; margin-top: 3%; margin-bottom: -3%" src="img/hd.svg">
                     <h3 style="color: #10C3F4; font-weight: 700; font-size: 300%">ИНТЕРНЕТ + ТВ</h3>
                     <p style="font-size: 150%">15 € / месяц</p>
                     <a style="text-decoration: none; padding: 1% 0 1% 0; width: 15%; margin-left: 3%;" class="enjoy_button">
@@ -89,7 +89,7 @@
                     <p style="margin-top: 10%; margin-bottom: -5%;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
                 </div>
                 <div style="background-image: url('img/firstslide.png')" class="carousel-item net_packet">
-                    <img style="margin-left: 3%; margin-top: 3%;" src="img/hd.svg">
+                    <img style="margin-left: 3%; margin-top: 3%; margin-bottom: -3%" src="img/hd.svg">
                     <h3 style="color: #10C3F4; font-weight: 700; font-size: 300%">ИНТЕРНЕТ + ТВ</h3>
                     <p style="font-size: 150%">15 € / месяц</p>
                     <a style="text-decoration: none; padding: 1% 0 1% 0; width: 15%; margin-left: 3%;" class="enjoy_button">
@@ -149,7 +149,7 @@
                             <img src="img/cost.png"/>&nbsp&nbsp&nbsp
                             <p>Цена:</p>
                         </div>
-                        <p>+2.50 EUR/месяц</p>
+                        <p style="margin-top: 3%;">+2.50 EUR/месяц</p>
                     </div>
                     <a class="connect_button">
                         Подключить
@@ -170,7 +170,7 @@
                             <img src="img/cost.png"/>&nbsp&nbsp&nbsp
                             <p>Цена:</p>
                         </div>
-                        <p>+1.25 EUR/месяц</p>
+                        <p style="margin-top: 3%;">+1.25 EUR/месяц</p>
                     </div>
                     <a class="connect_button">
                         Подключить
@@ -200,7 +200,7 @@
                             <img src="img/cost.png"/>&nbsp&nbsp&nbsp
                             <p>Цена:</p>
                         </div>
-                        <p>15 EUR/месяц</p>
+                        <p style="margin-top: 3%;">15 EUR/месяц</p>
                     </div>
                     <a class="connect_button">
                         Подключить
@@ -228,7 +228,7 @@
                             <img src="img/cost.png"/>&nbsp&nbsp&nbsp
                             <p>Цена:</p>
                         </div>
-                        <p>20 EUR/месяц</p>
+                        <p style="margin-top: 3%;">20 EUR/месяц</p>
                     </div>
                     <a class="connect_button">
                         Подключить
@@ -256,7 +256,7 @@
                             <img src="img/cost.png"/>&nbsp&nbsp&nbsp
                             <p>Цена:</p>
                         </div>
-                        <p>25 EUR/месяц</p>
+                        <p style="margin-top: 3%;">25 EUR/месяц</p>
                     </div>
                     <a class="connect_button">
                         Подключить
@@ -279,7 +279,7 @@
                             <img src="img/cost.png"/>&nbsp&nbsp&nbsp
                             <p>Цена:</p>
                         </div>
-                        <p>7 EUR/месяц</p>
+                        <p style="margin-top: 3%;">7 EUR/месяц</p>
                     </div>
                     <a class="connect_button">
                         Подключить
@@ -300,7 +300,7 @@
                             <img src="img/cost.png"/>&nbsp&nbsp&nbsp
                             <p>Цена:</p>
                         </div>
-                        <p>19 EUR/месяц</p>
+                        <p style="margin-top: 3%;">19 EUR/месяц</p>
                     </div>
                     <a class="connect_button">
                         Подключить
@@ -321,7 +321,7 @@
                             <img src="img/cost.png"/>&nbsp&nbsp&nbsp
                             <p>Цена:</p>
                         </div>
-                        <p>25 EUR/месяц</p>
+                        <p style="margin-top: 3%;">25 EUR/месяц</p>
                     </div>
                     <a class="connect_button">
                         Подключить
@@ -442,7 +442,7 @@
                             <img src="img/cost.png"/>&nbsp&nbsp&nbsp
                             <p>Цена:</p>
                         </div>
-                        <p style="margin-right: 15%;">7 EUR/месяц</p>
+                        <p style="margin-right: 15%;margin-top: 3%;">7 EUR/месяц</p>
                     </div>
                     <a class="connect_button">
                         Подключить
@@ -463,7 +463,7 @@
                             <img src="img/cost.png"/>&nbsp&nbsp&nbsp
                             <p>Цена:</p>
                         </div>
-                        <p style="margin-right: 15%;">19 EUR/месяц</p>
+                        <p style="margin-right: 15%;margin-top: 3%;">19 EUR/месяц</p>
                     </div>
                     <a class="connect_button">
                         Подключить
@@ -484,7 +484,7 @@
                             <img src="img/cost.png"/>&nbsp&nbsp&nbsp
                             <p>Цена:</p>
                         </div>
-                        <p style="margin-right: 15%;">25 EUR/месяц</p>
+                        <p style="margin-right: 15%;margin-top: 3%;">25 EUR/месяц</p>
                     </div>
                     <a class="connect_button">
                         Подключить
