kakoi to update

--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
 <script src="js/script.js"></script>
 <head>
     <title>Fill Networks</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 <header class="header">
@@ -28,7 +29,13 @@
 </header>
 <nav class="nav-bar">
     <div class="logo">
-        <img src="img/logo.png"/>
+        <img src="img/logo.svg"/>
+    </div>
+    <div class="right_mobile_header">
+        <img style="width: 18px; height: 17px" src="img/mobile_phone.png"/>
+        <div class="burger">
+            <a data-fancybox href="#hidden_nav"><img style="width: 22px; height: 11px" src="img/burger.png"/></a>
+        </div>
     </div>
     <ul class="nav">
         <a href="about.html" style="color: #10C3F4;text-decoration: none"><li>О фирме</li></a>
@@ -47,8 +54,13 @@
         <img src="img/right_arrow.png"/>
         <p>О фирме</p>
     </div>
+    <div class="mobile_prev">
+        <a href="index.html">Главная</a>
+        <img src="img/right_arrow.png"/>
+        <p>О фирме</p>
+    </div>
     <div class="about_text">
-        <img style="position: absolute;margin-left: 22%; margin-top: -2%; width: 38%" src="img/about_back.png"/>
+        <img class="about_back" style="position: absolute;margin-left: 22%; margin-top: -2%; width: 38%" src="img/about_back.png"/>
         <h1>О фирме</h1>
         <p><span style="color: #FF5C28;font-weight: bold">FILL Networks</span> – один из ведущих операторов рынка телекоммуникационных услуг Нарвы, предлагающий физическим и юридическим лицам доступ в интернет, цифровое телевидение, а также широкий спектр дополнительных услуг.<br><br>
 
@@ -58,7 +70,9 @@
         <div class="lux">
             <h5>Член правления:</h5>&nbsp&nbsp&nbsp
             <span>Кристина Лукс</span>&nbsp&nbsp&nbsp
-            <img src="img/initial.png"/>
+            <img class="initial" src="img/initial.png"/>
+            <br>
+            <img class="mobile_initial" src="img/initial.png"/>
         </div>
     </div>
     <div class="etc">
@@ -69,12 +83,16 @@
 
             Продажа и установка роутеров и точек беспроводного доступа (Wi-Fi access point) фирм TotoLink, MikroTik, TP-link с гарантией от производителя. </p>
         <div class="up">
-            <p style="width: 38%; padding: 3% 1% 3% 2%;">Возобновление договора, включение должников, переезд, подключение 2-ой и последующих приставок 10€.</p>
-            <p style="width: 50%; padding: 3% 3% 3% 4%;">Смена статуса (ON или OFF) и перерасчёт оплаты вручную делается только 1 раз в календарный месяц. </p>
+            <p class="up_p" style="width: 38%; padding: 3% 1% 3% 2%;">Возобновление договора, включение должников, переезд, подключение 2-ой и последующих приставок 10€.</p>
+            <p class="up_p" style="width: 50%; padding: 3% 3% 3% 4%;">Смена статуса (ON или OFF) и перерасчёт оплаты вручную делается только 1 раз в календарный месяц. </p>
+            <p class="mobile_up_p" style="width: 95%; padding: 7% 0 7% 6%;">Возобновление договора, включение должников, переезд, подключение 2-ой и последующих приставок 10€.</p>
+            <p class="mobile_up_p" style="width: 95%; padding: 7% 0 7% 6%; margin-top: 1%;">Смена статуса (ON или OFF) и перерасчёт оплаты вручную делается только 1 раз в календарный месяц. </p>
         </div>
         <div class="down">
-            <p style="width: 50%; padding: 3% 5% 3% 2%;">Если известны сроки ON/OFF в месяце и перерасчёт вручную делается один раз, то минимальная сумма оплаты составит в этом месяце 50% от стоимости пакета.</p>
-            <p style="width: 38%; padding: 3% 1% 3% 2%;">При повторной смене статуса за месяц начисляется полная стоимость пакета.</p>
+            <p class="down_p" style="width: 50%; padding: 3% 5% 3% 2%;">Если известны сроки ON/OFF в месяце и перерасчёт вручную делается один раз, то минимальная сумма оплаты составит в этом месяце 50% от стоимости пакета.</p>
+            <p class="down_p" style="width: 38%; padding: 3% 1% 3% 2%;">При повторной смене статуса за месяц начисляется полная стоимость пакета.</p>
+            <p class="mobile_down_p" style="width: 95%; padding: 7% 0 7% 6%;">Если известны сроки ON/OFF в месяце и перерасчёт вручную делается один раз, то минимальная сумма оплаты составит в этом месяце 50% от стоимости пакета.</p>
+            <p class="mobile_down_p" style="width: 95%; padding: 7% 0 7% 6%;">При повторной смене статуса за месяц начисляется полная стоимость пакета.</p>
         </div>
     </div>
     <div class="contacts">
