--- a/registration.html
+++ b/registration.html
@@ -12,9 +12,9 @@
     <a>ENG</a>
 </div>
 <img style="position: absolute; right: 2%; top: 3%" src="img/white_logo.png"/>
-<img style="margin-top: -6%; margin-left: 15%; position: absolute" src="img/arrow.png"/>
+<img style="margin-top: -6%; margin-left: 15%; position: absolute" src="img/arrow.svg"/>
 <div class="login">
-    <img style="width: 40%; padding-top: 5%;" src="img/logo.png"/>
+    <img style="width: 40%; padding-top: 5%;" src="img/logo.svg"/>
     <p style="font-weight: bold;color: #10C3F4;line-height: 17px;font-size:100%;">Создание аккаунта</p>
     <input style="border: 1px solid #BFBFBF; box-sizing: border-box; border-radius: 5px; width: 60%; padding: 1.5% 0 1.5% 3%; outline: none; color: #4F4F4F; font-weight: 600;" type="text" placeholder="Идентификатор"/><br>
     <input style="border: 1px solid #BFBFBF; box-sizing: border-box; border-radius: 5px; width: 60%; padding: 1.5% 0 1.5% 3%; outline: none; color: #4F4F4F; font-weight: 600;" type="email" placeholder="E-mail"/><br>
