--- a/login.html
+++ b/login.html
@@ -3,6 +3,7 @@
 <link rel="stylesheet" href="css/login.css">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Вход или регистрация</title>
 </head>
 <body>
@@ -11,13 +12,13 @@
         <a style="color: #10C3F4;">RUS</a>&nbsp&nbsp
         <a>ENG</a>
     </div>
-    <img style="position: absolute; right: 2%; top: 3%" src="img/white_logo.png"/>
-    <img style="margin-top: -6%; margin-left: 15%; position: absolute" src="img/arrow.png"/>
+    <img class="white_logo" src="img/white_logo.svg"/>
+    <img class="arrow" src="img/arrow.svg"/>
     <div class="login">
-        <img style="width: 40%; padding-top: 5%;" src="img/logo.png"/>
+        <img class="logo" src="img/logo.svg"/>
         <p style="font-weight: bold;color: #10C3F4;line-height: 17px;font-size:100%;">Вход в личный кабинет</p>
-        <input style="border: 1px solid #BFBFBF; box-sizing: border-box; border-radius: 5px; width: 60%; padding: 1.5% 0 1.5% 3%; outline: none; color: #4F4F4F; font-weight: 600;" type="text" placeholder="Идентификатор"/><br>
-        <input style="border: 1px solid #BFBFBF; box-sizing: border-box; border-radius: 5px; width: 60%; padding: 1.5% 0 1.5% 3%; outline: none; color: #4F4F4F; font-weight: 600;" type="password" placeholder="Пароль"/><br>
+        <input class="login_input" type="text" placeholder="Идентификатор"/><br>
+        <input class="login_input" type="password" placeholder="Пароль"/><br>
         <div class="check">
             <input type="checkbox">&nbsp&nbsp
             <p>Заходить автоматически</p>
@@ -34,8 +35,8 @@
             <img src="img/facebook.png"/>
             <img src="img/ok.png"/>
         </div>
-        <p style="color: #4F4F4F; font-size: 80%; margin-top: 5%;">1999-2021 FILL NETWORKS © Все права защищены</p>
-        <a href="conf.html" style="color: #4F4F4F; font-size: 80%;">Политика конфиденциальности</a>
+        <p style="color: #4F4F4F; font-size: 70%; margin-top: 5%;">1999-2021 FILL NETWORKS © Все права защищены</p>
+        <a href="conf.html" style="color: #4F4F4F; font-size: 70%;">Политика конфиденциальности</a>
     </div>
 </body>
 </html>
