--- a/about.html
+++ b/about.html
@@ -122,22 +122,22 @@
             <p style="border-bottom: 2px solid #FF5C28; width: 25%; padding-bottom: 8%;">Нарва</p>
             <div class="seb">
                 <p>Seb:</p>&nbsp&nbsp&nbsp&nbsp
-                <p>E1234567232333</p>
+                <p class="mob">E1234567232333</p>
             </div>
             <div class="swebank">
                 <p>Swebank:</p> &nbsp&nbsp&nbsp&nbsp
-                <p>E1234567232333</p>
+                <p class="mob">E1234567232333</p>
             </div>
         </div>
         <div class="numbers">
             <p style="border-bottom: 2px solid #FF5C28; width: 70%; padding-bottom: 8%;">Номера телефонов</p>
             <div class="dis">
                 <p>Диспетчер:</p>&nbsp&nbsp&nbsp&nbsp
-                <p>+(372) 123 123 12</p>
+                <p class="mob">+(372) 123 123 12</p>
             </div>
             <div class="money_check">
                 <p>Бухгалтер:</p>&nbsp&nbsp&nbsp&nbsp
-                <p>+(372) 123 123 12</p>
+                <p class="mob">+(372) 123 123 12</p>
             </div>
         </div>
         <div class="work_time">
@@ -154,7 +154,7 @@
         </div>
     </div>
     <div class="down_footer">
-        <img src="img/logo.png"/>
+        <img src="img/logo.svg"/>
         <p>1999-2021 FILL NETWORKS © Все права защищены</p>
         <a href="">Политика конфиденциальности</a>
     </div>
