--- a/registration.html
+++ b/registration.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Вход или регистрация</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 <div class="languages">
@@ -11,16 +12,16 @@
     <a style="color: #10C3F4;">RUS</a>&nbsp&nbsp
     <a>ENG</a>
 </div>
-<img style="position: absolute; right: 2%; top: 3%" src="img/white_logo.png"/>
-<img style="margin-top: -6%; margin-left: 15%; position: absolute" src="img/arrow.svg"/>
+<img class="white_logo" src="img/white_logo.png"/>
+<img class="arrow" src="img/arrow.svg"/>
 <div class="login">
     <img style="width: 40%; padding-top: 5%;" src="img/logo.svg"/>
     <p style="font-weight: bold;color: #10C3F4;line-height: 17px;font-size:100%;">Создание аккаунта</p>
-    <input style="border: 1px solid #BFBFBF; box-sizing: border-box; border-radius: 5px; width: 60%; padding: 1.5% 0 1.5% 3%; outline: none; color: #4F4F4F; font-weight: 600;" type="text" placeholder="Идентификатор"/><br>
-    <input style="border: 1px solid #BFBFBF; box-sizing: border-box; border-radius: 5px; width: 60%; padding: 1.5% 0 1.5% 3%; outline: none; color: #4F4F4F; font-weight: 600;" type="email" placeholder="E-mail"/><br>
-    <input style="border: 1px solid #BFBFBF; box-sizing: border-box; border-radius: 5px; width: 60%; padding: 1.5% 0 1.5% 3%; outline: none; color: #4F4F4F; font-weight: 600;" type="password" placeholder="Пароль"/><br>
-    <input style="border: 1px solid #BFBFBF; box-sizing: border-box; border-radius: 5px; width: 60%; padding: 1.5% 0 1.5% 3%; outline: none; color: #4F4F4F; font-weight: 600;" type="password" placeholder="Повторите пароль"/>
-    <a style="margin-left: -21%; margin-top: 4%;" class="enjoy">
+    <input class="reg_input" type="text" placeholder="Идентификатор"/><br>
+    <input class="reg_input" type="email" placeholder="E-mail"/><br>
+    <input class="reg_input" type="password" placeholder="Пароль"/><br>
+    <input class="reg_input" type="password" placeholder="Повторите пароль"/>
+    <a class="enjoy rega">
         Создать
     </a><br>
     <div class="reg" style="padding-top: 20%; padding-bottom: 5%;">
