--- a/reg_accept.html
+++ b/reg_accept.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Вход или регистрация</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 <div class="languages">
@@ -11,12 +12,12 @@
     <a style="color: #10C3F4;">RUS</a>&nbsp&nbsp
     <a>ENG</a>
 </div>
-<img style="position: absolute; right: 2%; top: 3%" src="img/white_logo.png"/>
-<img style="margin-top: -6%; margin-left: 15%; position: absolute" src="img/arrow.png"/>
+<img class="white_logo" src="img/white_logo.png"/>
+<img class="arrow" src="img/arrow.png"/>
 <div class="login" style="padding-bottom: 10%;">
     <img style="width: 40%; padding-top: 5%;" src="img/logo.png"/>
     <div class="accept">
-        <img style="margin-top: 5%; margin-bottom: 2%;" src="img/accept.png"/>
+        <img style="margin-top: 5%; margin-bottom: 2%; width: 30%" src="img/accept.svg"/>
     </div>
     <p style="font-weight: bold;color: #10C3F4;line-height: 17px;font-size:100%;">На вашу почту выслано письмо с подтверждением.<br> Подтвердите регистрацию.</p>
 </div>
