--- a/service_net.html
+++ b/service_net.html
@@ -4,6 +4,7 @@
 <script src="js/script.js"></script>
 <head>
     <title>Fill Networks</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 <header class="header">
@@ -28,7 +29,13 @@
 </header>
 <nav class="nav-bar">
     <div class="logo">
-        <img src="img/logo.png"/>
+        <img src="img/logo.svg"/>
+    </div>
+    <div class="right_mobile_header">
+        <img style="width: 18px; height: 17px" src="img/mobile_phone.png"/>
+        <div class="burger">
+            <a data-fancybox href="#hidden_nav"><img style="width: 22px; height: 11px" src="img/burger.png"/></a>
+        </div>
     </div>
     <ul class="nav">
         <a href="about.html" style="color: inherit;text-decoration: none"><li>О фирме</li></a>
@@ -49,8 +56,15 @@
         <img src="img/right_arrow.png"/>
         <p>Интернет</p>
     </div>
+    <div class="mobile_prev">
+        <a href="index.html">Главная</a>
+        <img src="img/right_arrow.png"/>
+        <a href="services.html">Услуги</a>
+        <img src="img/right_arrow.png"/>
+        <p>Интернет</p>
+    </div>
     <div style="margin-left: 0;" class="services_content">
-        <h1 style="font-size: 150%; color: #10C3F4">Интернет</h1>
+        <h1 class="net_h">Интернет</h1>
         <div style="margin-left: -1.5%;" class="services_suggests">
             <div class="up_suggest"></div>
                 <div class="suggest">
@@ -118,7 +132,7 @@
                 </div>
             </div>
             <div class="down_suggest">
-                <div style="width: 32.5%" class="suggest">
+                <div class="suggest">
                     <h4>«Скорость 100 Мбит/с»</h4>
                     <h5>Стандартный тариф для всей семьи. Скорости интернета хватит для всех задач.</h5>
                     <div style="padding-top: 8%;" class="speed">
@@ -139,7 +153,7 @@
                         Подключить
                     </a>
                 </div>
-                <div style="width: 32.5%" class="suggest">
+                <div class="suggest">
                     <h4>«Скорость 300 Мбит/с»</h4>
                     <h5>Стандартный тариф для всей семьи. Скорости интернета хватит для всех задач.</h5>
                     <div style="padding-top: 8%;" class="speed">
@@ -160,7 +174,7 @@
                         Подключить
                     </a>
                 </div>
-                <div style="width: 32.5%" class="suggest">
+                <div class="suggest">
                     <h4>«Скорость 500 Мбит/с»</h4>
                     <h5>Стандартный тариф для всей семьи. Скорости интернета хватит для всех задач.</h5>
                     <div style="padding-top: 8%;" class="speed">
@@ -223,7 +237,7 @@
         </div>
     </div>
     <div class="down_footer">
-        <img src="img/logo.png"/>
+        <img src="img/logo.svg"/>
         <p>1999-2021 FILL NETWORKS © Все права защищены</p>
         <a href="">Политика конфиденциальности</a>
     </div>
