--- a/service_tv.html
+++ b/service_tv.html
@@ -4,6 +4,7 @@
 <script src="js/script.js"></script>
 <head>
     <title>Fill Networks</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 <header class="header">
@@ -28,7 +29,13 @@
 </header>
 <nav class="nav-bar">
     <div class="logo">
-        <img src="img/logo.png"/>
+        <img src="img/logo.svg"/>
+    </div>
+    <div class="right_mobile_header">
+        <img style="width: 18px; height: 17px" src="img/mobile_phone.png"/>
+        <div class="burger">
+            <a data-fancybox href="#hidden_nav"><img style="width: 22px; height: 11px" src="img/burger.png"/></a>
+        </div>
     </div>
     <ul class="nav">
         <a href="about.html" style="color: inherit;text-decoration: none"><li>О фирме</li></a>
@@ -49,11 +56,18 @@
         <img src="img/right_arrow.png"/>
         <p>Телевидение</p>
     </div>
+    <div class="mobile_prev">
+        <a href="index.html">Главная</a>
+        <img src="img/right_arrow.png"/>
+        <a href="services.html">Услуги</a>
+        <img src="img/right_arrow.png"/>
+        <p>Телевидение</p>
+    </div>
     <div style="margin-left: 0;" class="services_content">
-        <h1 style="font-size: 150%; color: #10C3F4">Телевидение</h1>
+        <h1 class="mobile_tv">Телевидение</h1>
         <div style="margin-left: -1.5%;" class="services_suggests">
             <div class="up_suggest"></div>
-            <div style="padding-bottom: 15%;" class="suggest">
+            <div class="suggest suggest_tv">
                 <h4>«Базовый пакет»</h4>
                 <h5>Интерактивное цифровое телевидение высокого качества</h5>
                 <div class="speed">
@@ -73,14 +87,14 @@
                 <a class="connect_button">
                     Подключить
                 </a>
-                <a style="color: #FF5C28; background: white; border: 1.5px solid #FF5C28;margin-top: 5%;" class="connect_button">
+                <a class="connect_button connect_button_orange">
                     Ознакомиться
                 </a>
             </div>
-            <div class="suggest">
+            <div class="suggest suggest_tv">
                 <div style="display: flex; align-items: center; margin-bottom: -5%;">
                     <h4>«4K UHD-пакет»</h4>&nbsp&nbsp&nbsp&nbsp
-                    <img src="img/orange.png"/>
+                    <img class="hd" src="img/orange.png"/>
                 </div>
                 <h5>Интерактивное цифровое телевидение высокого качества</h5>
                 <div style="padding-top: 5%;" class="speed">
@@ -100,11 +114,11 @@
                 <a class="connect_button">
                     Подключить
                 </a>
-                <a style="color: #FF5C28; background: white; border: 1.5px solid #FF5C28;margin-top: 5%;" class="connect_button">
+                <a class="connect_button connect_button_orange">
                     Ознакомиться
                 </a>
             </div>
-            <div class="suggest">
+            <div class="suggest suggest_tv">
                 <h4>«Эротик-пакет +18»</h4>
                 <h5>Интерактивное цифровое телевидение высокого качества</h5>
                 <div style="padding-top: 8%;" class="speed">
@@ -124,13 +138,13 @@
                 <a class="connect_button">
                     Подключить
                 </a>
-                <a style="color: #FF5C28; background: white; border: 1.5px solid #FF5C28;margin-top: 5%;" class="connect_button">
+                <a class="connect_button connect_button_orange">
                     Ознакомиться
                 </a>
             </div>
         </div>
         <div style="justify-content: flex-start" class="down_suggest">
-            <div style="width: 32.5%; padding-bottom: 15%;" class="suggest">
+            <div class="suggest suggest_tv">
                 <h4>«Кино»</h4>
                 <h5>Интерактивное цифровое телевидение высокого качества</h5>
                 <div style="padding-top: 8%;" class="speed">
@@ -150,13 +164,13 @@
                 <a class="connect_button">
                     Подключить
                 </a>
-                <a style="color: #FF5C28; background: white; border: 1.5px solid #FF5C28;margin-top: 5%;" class="connect_button">
+                <a class="connect_button connect_button_orange">
                     Ознакомиться
                 </a>
             </div>
-            <div style="width: 32.5%; margin-left: 1.2%;" class="suggest">
+            <div class="suggest suggest_tv">
                 <h4>«Первый Балтийский»</h4>
-                <h5 style="width: 100%">Тематический пакет в Балтии, развлекательные и образовательные программы, фильмы</h5>
+                <h5 style="width: 100%">Тематический пакет в Балтии,<br> развлекательные и образовательные программы, фильмы</h5>
                 <div style="padding-top: 8%;" class="speed">
                     <div class="speed_info">
                         <img src="img/orange_phone.png"/>&nbsp&nbsp&nbsp
@@ -174,7 +188,7 @@
                 <a class="connect_button">
                     Подключить
                 </a>
-                <a style="color: #FF5C28; background: white; border: 1.5px solid #FF5C28;margin-top: 5%;" class="connect_button">
+                <a class="connect_button connect_button_orange">
                     Ознакомиться
                 </a>
             </div>
@@ -220,7 +234,7 @@
         </div>
     </div>
     <div class="down_footer">
-        <img src="img/logo.png"/>
+        <img src="img/logo.svg"/>
         <p>1999-2021 FILL NETWORKS © Все права защищены</p>
         <a href="">Политика конфиденциальности</a>
     </div>
