--- a/services.html
+++ b/services.html
@@ -4,6 +4,7 @@
 <script src="js/script.js"></script>
 <head>
     <title>Fill Networks</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 <header class="header">
@@ -28,7 +29,13 @@
 </header>
 <nav class="nav-bar">
     <div class="logo">
-        <img src="img/logo.png"/>
+        <img src="img/logo.svg"/>
+    </div>
+    <div class="right_mobile_header">
+        <img style="width: 18px; height: 17px" src="img/mobile_phone.png"/>
+        <div class="burger">
+            <a data-fancybox href="#hidden_nav"><img style="width: 22px; height: 11px" src="img/burger.png"/></a>
+        </div>
     </div>
     <ul class="nav">
         <a href="about.html" style="color: inherit;text-decoration: none"><li>О фирме</li></a>
@@ -47,8 +54,13 @@
         <img src="img/right_arrow.png"/>
         <p>Услуги</p>
     </div>
+    <div class="mobile_prev">
+        <a href="index.html">Главная</a>
+        <img src="img/right_arrow.png"/>
+        <p>Услуги</p>
+    </div>
     <div class="services_content">
-        <h1 style="font-size: 150%; color: #10C3F4">Услуги</h1>
+        <h1 class="service_top">Услуги</h1>
         <div class="up_content">
             <div class="tv">
                 <h1>Телевидение</h1>
@@ -64,7 +76,7 @@
         <div class="down_content">
             <h1>Интернет + TV</h1>
             <p>Превосходное качество изображения и звука на экране вашего телевизора в формате HD и высокоскоростной интернет по выгодным ценам</p>
-            <button style="width: 15%; height: 5%; margin-top: 15.5%;margin-left: 2.4%;  margin-bottom: 2%;cursor: pointer" type="button" onclick="document.location='service_tv_net.html'">Смотреть тарифы</button>
+            <button type="button" onclick="document.location='service_tv_net.html'">Смотреть тарифы</button>
         </div>
     </div>
 </main>
@@ -106,7 +118,7 @@
         </div>
     </div>
     <div class="down_footer">
-        <img src="img/logo.png"/>
+        <img src="img/logo.svg"/>
         <p>1999-2021 FILL NETWORKS © Все права защищены</p>
         <a href="">Политика конфиденциальности</a>
     </div>
