--- a/support.html
+++ b/support.html
@@ -4,6 +4,7 @@
 <script src="js/script.js"></script>
 <head>
     <title>Fill Networks</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 <header class="header">
@@ -30,6 +31,12 @@
     <div class="logo">
         <img src="img/logo.png"/>
     </div>
+    <div class="right_mobile_header">
+        <img style="width: 18px; height: 17px" src="img/mobile_phone.png"/>
+        <div class="burger">
+            <a data-fancybox href="#hidden_nav"><img style="width: 22px; height: 11px" src="img/burger.png"/></a>
+        </div>
+    </div>
     <ul class="nav">
         <a href="about.html" style="color: inherit;text-decoration: none"><li>О фирме</li></a>
         <a href="services.html" style="color: inherit;text-decoration: none"><li>Услуги</li></a>
@@ -47,25 +54,30 @@
         <img src="img/right_arrow.png"/>
         <p>Техническая поддержка</p>
     </div>
+    <div class="mobile_prev">
+        <a href="index.html">Главная</a>
+        <img src="img/right_arrow.png"/>
+        <p>Техническая поддержка</p>
+    </div>
     <div class="support_content">
-        <h1 style="font-size: 150%; color: #10C3F4; margin-top: 3%;">Техническая поддержка</h1>
+        <h1 class="tv_net">Техническая поддержка</h1>
         <form class="support_form">
             <div class="feedback">
                 <textarea placeholder="Сообщение"></textarea>
             </div>
             <h1>Обратная связь</h1>
-            <img src="img/blue_line.png"/>
-            <p style="margin-top: 8%;">Ваше имя</p>
+            <img class="blue" src="img/blue_line.png"/>
+            <p class="oh" style="margin-top: 8%;">Ваше имя</p>
             <input type="text">
-            <p style="margin-top: 3%;">Ваш номер телефона</p>
+            <p class="oh" style="margin-top: 3%;">Ваш номер телефона</p>
             <input type="text">
-            <p style="margin-top: 2.5%;">Ваша почта</p>
+            <p class="oh" style="margin-top: 2.5%;">Ваша почта</p>
             <input type="text">
-            <div style="margin-top: 2%;">
+            <div class="hid" style="margin-top: 2%;">
                 <input style="width: 3%;margin-left: -1%;" type="checkbox">
                 <h5 style="color: white; font-size: 105%;margin-top: 3.4%;">Я согласен(а) на обработку данных</h5>
             </div>
-            <button style="float:right;margin-top: -3%; border: none; outline: none; font-family: 'Montserrat', sans-serif; font-size: 125%; font-weight: 600; color: white;height: 10.4%;width: 44.5%; background: #10C3F4" type="submit">ОТПРАВИТЬ</button>
+            <button class="support_button" type="submit">ОТПРАВИТЬ</button>
         </form>
     </div>
 </main>
